Add test in assembly for kdlp syscall
Add test in assembly for the new kdlp syscall
Adjust Make file to build the assembly test

Signed-off-by: bashar-osama <bashar-osama@spring2024-iit.kdlp.underground.software>

--- a/bashar-osama/P1/Makefile
+++ b/bashar-osama/P1/Makefile
@@ -1,13 +1,22 @@
 CC = gcc
-CFLAGS = -g -Wall
+AS = as
+LD = ld
+CFLAGS = -Wall
 
 SRC = test_kdlp.c
 TARGET = test_kdlp
+SRC_ASM = test_kdlp_asm.s
+OBJ_ASM = test_kdlp_asm.o
+TARGET_ASM = test_kdlp_asm
 
-all: $(TARGET)
+all: $(TARGET) $(TARGET_ASM)
 
 $(TARGET): $(SRC)
 	$(CC) $(CFLAGS) -o $(TARGET) $(SRC)
 
+$(TARGET_ASM): $(OBJ_ASM)
+	$(LD) -o $(TARGET_ASM) $(OBJ_ASM)
+$(OBJ_ASM): $(SRC_ASM)
+	$(AS) -o $(OBJ_ASM) $(SRC_ASM)
 clean:
-	rm -f  $(TARGET)
+	rm -f  $(TARGET) $(TARGET_ASM) $(OBJ_ASM)
