Add kdlp module
Add kdlp.c module and modified Makefile

Signed-off-by: bashar-osama <bashar-osama@spring2024-iit.kdlp.underground.software>

--- a/bashar-osama/E2/Makefile
+++ b/bashar-osama/E2/Makefile
@@ -1,6 +1,13 @@
 obj-m += kdlp.o
-all: build_tests
+all: build build_tests
+build:
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+load:
+	sudo insmod kdlp.ko
+unload:
+	sudo rmmod kdlp
 build_tests:
 	gcc -o kdlp_test kdlp_test.c
 clean:
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
 	@if [ -f kdlp_test ]; then rm -f kdlp_test; fi
